tests/ui/clap_derive_name_value_attr.stderr
error: expected parentheses
  --> $DIR/clap_derive_name_value_attr.rs:14:12
   |
14 |     #[clap = "short"]
   |            ^
